// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseButton component:  should match the snapshot  1`] = `
<DocumentFragment>
  .c0.c0 {
  width: 4.5rem;
  background: #f7f7f7;
  color: #257f39;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  border-radius: 0;
  border: 0;
}

.c0.c0:hover,
.c0.c0:active {
  background: #f7f7f7;
  border: 0;
}

.c0.c0:focus {
  border: 0;
  border-radius: 0;
}

.c0.c0 span {
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
}

<button
    class="MuiButtonBase-root MuiButton-root MuiButton-text c0"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    />
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;

exports[`Container component:  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  cursor: pointer;
  padding: 0.625rem 0;
  background-color: transparent;
  border: none;
}

.c0:active {
  background-color: transparent;
  border: none;
}

<button
    class="c0"
  />
</DocumentFragment>
`;

exports[`CountryFlagImg component:  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0.125rem solid #ffffff;
  border-radius: 50%;
  width: 1.375rem;
  height: 1.375rem;
  background: #ffffff;
}

@media (min-width:768px) {
  .c0 {
    width: 1.5rem;
    height: 1.5rem;
  }
}

<img
    alt="image"
    class="c0"
    src="/abc/abe.jpg"
  />
</DocumentFragment>
`;

exports[`CountrySelectorContainerLanguageButtons component:  should match the snapshot if not selected 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: .0625rem solid #9e9e9e;
  background: #ffffff;
  font-weight: 400;
  border-radius: 0.25rem;
  font-family: "AzoSansRegular","Helvetica Neue",Arial,sans-serif;
  width: calc((100% - 1rem) / 2);
  height: 2.75rem;
  font-size: 0.875rem;
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

@media (min-width:1024px) {
  .c0 {
    height: 2rem;
  }
}

<button
    class="c0"
  />
</DocumentFragment>
`;

exports[`CountrySelectorContainerLanguageButtons component:  should match the snapshot if selected 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: .125rem solid #257F39;
  background: rgba(48,167,75,0.05);
  font-weight: 500;
  border-radius: 0.25rem;
  font-family: "AzoSansMedium","Helvetica Neue",Arial,sans-serif;
  width: calc((100% - 1rem) / 2);
  height: 2.75rem;
  font-size: 0.875rem;
  cursor: pointer;
}

.c0:focus {
  outline: none;
}

@media (min-width:1024px) {
  .c0 {
    height: 2rem;
  }
}

<button
    class="c0"
  />
</DocumentFragment>
`;

exports[`StayText component:  should match the snapshot  1`] = `
<DocumentFragment>
  .c0.c0 {
  color: #257f39;
  font-family: "AzoSansRegular","Helvetica Neue",Arial,sans-serif;
  font-weight: 500;
  padding-right: 0.25rem;
}

<span
    class="MuiTypography-root c0 MuiTypography-body1"
  />
</DocumentFragment>
`;

exports[`StyledIcon component:  should match the snapshot when ltr 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  margin: -0.125rem 0 0 0.25rem;
  top: 0;
}

<img
    class="c0"
  />
</DocumentFragment>
`;

exports[`StyledIcon component:  should match the snapshot when rtl 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  margin: -0.125rem 0 0 0.25rem;
  top: 0;
}

<img
    class="c0"
  />
</DocumentFragment>
`;
